--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,11 @@
         <![endif]-->
         <link rel="shortcut icon" href="">
     </head>
+    <script>
+     document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] +
+                    ':35729/livereload.js?snipver=1"></' + 'script>')
+    </script>
     <body>
-        hello world
+        <img src="/letter.png" />
     </body>
 </html>
