--- a/public/index.html
+++ b/public/index.html
@@ -1,24 +1,3 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title></title>
-        <meta charset="utf-8">
-        <meta name="description" content="">
-        <meta name="author" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="">
-        <!--[if lt IE 9]>
-            <script src="//cdn.jsdelivr.net/html5shiv/3.7.2/html5shiv.min.js"></script>
-            <script src="//cdnjs.cloudflare.com/ajax/libs/respond.js/1.4.2/respond.min.js"></script>
-        <![endif]-->
-        <link rel="shortcut icon" href="">
-    </head>
-    <script>
-     document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] +
-                    ':35729/livereload.js?snipver=1"></' + 'script>')
-    </script>
-    <body>
-        <img src="/letter.png" />
-    </body>
-</html>
+<h1 id="hoge">hoge</h1>
+<h2 id="fuga">fuga</h2>
+<h2 id="piyo">piyo</h2>
