remove unnecessary attribute

--- a/samples/example.html
+++ b/samples/example.html
@@ -18,7 +18,7 @@
 <body>
   
             
-              <div class="input-field mermaid" style="margin:auto;">
+              <div class="mermaid">
             graph TD 
               st{HI!}
               good((Great!!))
