--- a/samples/example.html
+++ b/samples/example.html
@@ -16,6 +16,11 @@
 
 </head>
 <body>
+
+    <div class="mermaid">
+        graph TD
+          a        
+    </div>
   
             
               <div class="mermaid">
@@ -29,6 +34,7 @@
               style st fill:blue,fill-opacity:0.35,color:#FFFFFF,stroke-opacity:0.2
               style en fill:red,fill-opacity:0.35,color:#FFFFFF,stroke-opacity:0.2
               classDef eco fill:green;
-              class A eco
+                  class A eco
+                  st --> A
   </div>
 </body>
